fixed spacing

--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ h3 {
     position: relative;
     width: 100%;
     text-align: center;
+    margin: 20px;
 }
 
 h3 p {
